<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.acronym.ActivitySearchAcronym">

    <EditText
        android:id="@+id/etSearchAcronym"
        android:layout_width="0dp"
        android:autofillHints="name"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/app_side_margin"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:background="@drawable/bg_btn_with_black_outline"
        android:hint="@string/search_acromine"
        android:paddingHorizontal="@dimen/padding_04_dp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/white" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/fhOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_side_margin"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="etSearchAcronym,btnSearch"
        app:flow_horizontalAlign="start"
        app:flow_horizontalGap="@dimen/margin_8_dp"
        app:flow_horizontalStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--Acronyms List-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_12_dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fhOne" />

    <!--No Data Found-->
    <TextView
        android:id="@+id/tvNoDataFound"
        style="@style/text_Style_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_found"
        android:textColor="@color/text_color_grey"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Progress-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>